# neijing-atlas-body-pattern-engine

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.tutu/: 00_now.md  03_backlog.md  README.md
.tutu/04_specs/: DECISIONS.md
data/: source_manifest.jsonl
docs/: application_english.md  architecture.md  data_policy.md  demo_prototype.md  safety_policy.md  token_justification.md
fixtures/: sample_canon_passages.jsonl  sample_daily_journal.json
prompts/: pattern_mapping.md  reflection_generation.md  safety_review.md  signal_extraction.md
scripts/: capture_demo_screenshots.mjs
sql/: schema.sql
src/neijing_atlas/: cli.py  pipeline.py
src/neijing_atlas.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
